--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
        "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1435,13 +1435,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 0</th>\n",
-       "      <td>70</td>\n",
-       "      <td>31</td>\n",
+       "      <td>71</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>6789</td>\n",
-       "      <td>10315</td>\n",
+       "      <td>6417</td>\n",
+       "      <td>10687</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1449,11 +1449,11 @@
       ],
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
-       "Actual 0           70           31\n",
-       "Actual 1         6789        10315"
+       "Actual 0           71           30\n",
+       "Actual 1         6417        10687"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,16 +1471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.648072305476572"
+       "0.6638974497309413"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1503,10 +1503,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.69      0.60      0.02      0.65      0.42       101\n",
-      "   low_risk       1.00      0.60      0.69      0.75      0.65      0.41     17104\n",
+      "  high_risk       0.01      0.70      0.62      0.02      0.66      0.44       101\n",
+      "   low_risk       1.00      0.62      0.70      0.77      0.66      0.44     17104\n",
       "\n",
-      "avg / total       0.99      0.60      0.69      0.75      0.65      0.41     17205\n",
+      "avg / total       0.99      0.63      0.70      0.76      0.66      0.44     17205\n",
       "\n"
      ]
     }
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1580,13 +1580,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 0</th>\n",
-       "      <td>70</td>\n",
-       "      <td>31</td>\n",
+       "      <td>71</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>6789</td>\n",
-       "      <td>10315</td>\n",
+       "      <td>6417</td>\n",
+       "      <td>10687</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1594,8 +1594,8 @@
       ],
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
-       "Actual 0           70           31\n",
-       "Actual 1         6789        10315"
+       "Actual 0           71           30\n",
+       "Actual 1         6417        10687"
       ]
      },
      "metadata": {},
@@ -1605,14 +1605,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced Accuracy Score : 0.648072305476572\n",
+      "Balanced Accuracy Score : 0.6638974497309413\n",
       "Classification Report\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.69      0.60      0.02      0.65      0.42       101\n",
-      "   low_risk       1.00      0.60      0.69      0.75      0.65      0.41     17104\n",
+      "  high_risk       0.01      0.70      0.62      0.02      0.66      0.44       101\n",
+      "   low_risk       1.00      0.62      0.70      0.77      0.66      0.44     17104\n",
       "\n",
-      "avg / total       0.99      0.60      0.69      0.75      0.65      0.41     17205\n",
+      "avg / total       0.99      0.63      0.70      0.76      0.66      0.44     17205\n",
       "\n"
      ]
     }
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1644,7 @@
        "Counter({'low_risk': 51366, 'high_risk': 51366})"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1673,16 +1673,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6625695222702812"
+       "0.6641481003806649"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1731,8 +1731,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>5277</td>\n",
-       "      <td>11827</td>\n",
+       "      <td>5223</td>\n",
+       "      <td>11881</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1741,10 +1741,10 @@
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
        "Actual 0           64           37\n",
-       "Actual 1         5277        11827"
+       "Actual 1         5223        11881"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1848,8 +1848,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>5277</td>\n",
-       "      <td>11827</td>\n",
+       "      <td>5223</td>\n",
+       "      <td>11881</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1858,7 +1858,7 @@
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
        "Actual 0           64           37\n",
-       "Actual 1         5277        11827"
+       "Actual 1         5223        11881"
       ]
      },
      "metadata": {},
@@ -1868,7 +1868,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced Accuracy Score : 0.6625695222702812\n",
+      "Balanced Accuracy Score : 0.6641481003806649\n",
       "Classification Report\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
        "Actual 1        10340         6764"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2019,7 @@
        "0.5442661782548694"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2070,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2206,7 +2206,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2220,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2256,8 +2256,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>7262</td>\n",
-       "      <td>9842</td>\n",
+       "      <td>7257</td>\n",
+       "      <td>9847</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2266,10 +2266,10 @@
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
        "Actual 0           76           25\n",
-       "Actual 1         7262         9842"
+       "Actual 1         7257         9847"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,16 +2285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6639481008437607"
+       "0.6640942654836111"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2336,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2401,8 +2401,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>7262</td>\n",
-       "      <td>9842</td>\n",
+       "      <td>7257</td>\n",
+       "      <td>9847</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2411,7 +2411,7 @@
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
        "Actual 0           76           25\n",
-       "Actual 1         7262         9842"
+       "Actual 1         7257         9847"
       ]
      },
      "metadata": {},
@@ -2421,7 +2421,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced Accuracy Score : 0.6639481008437607\n",
+      "Balanced Accuracy Score : 0.6640942654836111\n",
       "Classification Report\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
@@ -2458,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2491,7 +2491,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Balanced_Accuracy_Score</th>\n",
-       "      <td>0.65</td>\n",
+       "      <td>0.66</td>\n",
        "      <td>0.66</td>\n",
        "      <td>0.54</td>\n",
        "      <td>0.66</td>\n",
@@ -2502,13 +2502,13 @@
       ],
       "text/plain": [
        "                         Oversampling  SMOTE Oversamling  Undersampling  \\\n",
-       "Balanced_Accuracy_Score          0.65               0.66           0.54   \n",
+       "Balanced_Accuracy_Score          0.66               0.66           0.54   \n",
        "\n",
        "                         Combination Sampling  \n",
        "Balanced_Accuracy_Score                  0.66  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2524,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2561,7 +2561,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>high_risk</th>\n",
-       "      <td>0.69</td>\n",
+       "      <td>0.70</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.63</td>\n",
        "      <td>0.01</td>\n",
@@ -2572,7 +2572,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>low_risk</th>\n",
-       "      <td>0.60</td>\n",
+       "      <td>0.62</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.69</td>\n",
        "      <td>1.00</td>\n",
@@ -2587,15 +2587,15 @@
       ],
       "text/plain": [
        "           Ovr_Recall  Ovr_Precision  SM_Recall  SM_Precision  Und_Recall  \\\n",
-       "high_risk        0.69           0.01       0.63          0.01        0.69   \n",
-       "low_risk         0.60           1.00       0.69          1.00        0.40   \n",
+       "high_risk        0.70           0.01       0.63          0.01        0.69   \n",
+       "low_risk         0.62           1.00       0.69          1.00        0.40   \n",
        "\n",
        "           Und_Precision  Com_Recall  Com_Precision  \n",
        "high_risk           0.01        0.75           0.01  \n",
        "low_risk            1.00        0.58           1.00  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2621,9 +2621,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mlenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2635,7 +2635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
